<?xml version="1.0"?>
<package format="2">
  <name>laser_odometry_srf</name>
  <version>0.0.0</version>
  <description>
    The laser_odometry_srf package is a wrapper (a plugin)
    to use the srf scan matcher [1] in the
    laser_odometry package.
  </description>

  <author email="deray.jeremie@gmail.com">Jeremie Deray</author>
  <maintainer email="deray.jeremie@gmail.com">Jeremie Deray</maintainer>

  <!-- this package license -->
  <license>Apache-2.0</license>

  <!-- srf license -->
  <license>LGPL-3.0</license>
  <url type="website">https://github.com/MAPIRlab/srf_laser_odometry</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>srf_laser_odometry</depend>
  <depend>laser_odometry_core</depend>
  <!-- <depend>rosparam_handler</depend> -->
  <!-- <depend>dynamic_reconfigure</depend> -->

  <export>
    <laser_odometry_core plugin="${prefix}/laser_odometry_plugins.xml" />
  </export>
</package>
